--- a/scenarios/lessons/locust.conf
+++ b/scenarios/lessons/locust.conf
@@ -1,6 +1,6 @@
 # https://docs.locust.io/en/stable/configuration.html
 
-locustfile = locustfile.py
+locustfile = scenarios/lessons/create_lesson_scenario.py
 users = 200
 hatch-rate = 1
 run-time = 10s
